Added Room and Booking Controller